--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html
 lang="es_CO"
 dir="ltr">
@@ -8,6 +8,29 @@ dir="ltr">
 	<meta property="og:site_name" content="donjulio™">
     <meta property="og:type" content="website">
 	<meta property="og:title" content="Servicios de computación en la nube &nbsp;|&nbsp; donjulio™ &nbsp;|&nbsp; donjulio.info™">
+	<meta name="description" content="Enfrenta y supera tus desafíos empresariales gracias a los servicios de computación en la nube de donjulio™, que incluyen administración de datos, nubes híbridas y múltiples, IA y AA.">
+	<meta property="og:description" content="Enfrenta y supera tus desafíos empresariales gracias a los servicios de computación en la nube de donjulio™, que incluyen administración de datos, nubes híbridas y múltiples, IA y AA.">
+	<meta property="og:image" content="https://i.imgur.com/Li1czgP.png">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="donjulio™">
+    <meta name="twitter:site" content="@donjulioinfo">
+    <meta name="facebook:site" content="@donjulioinfo">
+    <meta name="tiktok:site" content="@donjulioinfo">
+    <title>Servicios de computación en la nube &nbsp;|&nbsp; donjulio™ &nbsp;|&nbsp; by donjulio.info</title>
+<base href="https://donjulio.info/">
+<title>donjulio.info &nbsp;|&nbsp; Notas donjulio™</title>
+<link rel="shortcut icon" href="https://i.imgur.com/6vfoNUr.png">
+<link rel="canonical" href="https://donjulio.info/" >
+<link href="style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="/extras.css">
+</head>
+<body>
+    <a href="https://www.donjulio.info/"><img src="https://i.imgur.com/6vfoNUr.png" title="by donjulio™" /></a>  
+</body>
+</html>
 	<meta name="description" content="Enfrenta y supera tus desafíos empresariales gracias a los servicios de computación en la nube de donjulio™, que incluyen administración de datos, nubes híbridas y múltiples, IA y AA.">
 	<meta property="og:description" content="Enfrenta y supera tus desafíos empresariales gracias a los servicios de computación en la nube de donjulio™, que incluyen administración de datos, nubes híbridas y múltiples, IA y AA.">
 	<meta property="og:image" content="https://cloud.google.com/_static/cloud/images/social-icon-google-cloud-1200-630.png">
